new running graph

--- a/_posts/2021-12-28-running-2021.md
+++ b/_posts/2021-12-28-running-2021.md
@@ -8,4 +8,5 @@ title: Running 2021
 ![pace](/assets/plots/running_2021/pace.svg){: width="90%" }
 ![cadence](/assets/plots/running_2021/cadence.svg){: width="90%" }
 ![heart_rate](/assets/plots/running_2021/heart_rate.svg){: width="90%" }
-![distance](/assets/plots/running_2021/distance.svg){: width="90%" }
+![mean_distance](/assets/plots/running_2021/mean_distance.svg){: width="90%" }
+![total_distance](/assets/plots/running_2021/total_distance.svg){: width="90%" }
